
Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul

version 2.6.5 (??/??/20??):
	General:
	* Build-time fixes for Solaris.  (Paul Townsend)

	AIM and ICQ:
	* Messages from some mobile clients are no longer displayed as
	  Chinese characters (broken in 2.6.4)

	XMPP:
	* Do not crash when attempting to register for a new account on Windows.
	* Fix file transfer with clients that do not support Entity Capabilities
	  (e.g. Spark)

version 2.6.4 (11/29/2009):
	libpurple:
	* Actually emit the hold signal for media calls.
	* Fix building the GnuTLS plugin with older versions of GnuTLS.
	* Fix DNS TXT query resolution.
	* Don't send Proxy-Authorization headers to HTTP proxy servers until we've
	  received a "407 Proxy Authentication Required" response from the server.
	  (thecrux)
	* Added "MXit" protocol plugin, supported and maintained by the MXit folks
	  themselves (MXit Lifestyle (Pty) Ltd.)

	General:
	* New 'plugins' sub-command to 'debug' command (i.e. '/debug plugins')
	  to announce the list of loaded plugins (in both Finch and Pidgin).
	* Always rejoin open chats after an account reconnects.

	AIM and ICQ:
	* Better rate limit calculations and other improvements.  (Aman Gupta)
	* More detailed error messages when messages fail to send.  (Aman Gupta)
	* The simultaneous login account option is respected when using
	  the clientLogin authentication method.
	* Fix offline message retrieval (broken in 2.6.3)
	* Fix handling of markup on some messages (broken in 2.6.2)
	* Fix SSL when clientLogin is enabled.
	* Fix sending and receiving Unicode characters in a Direct IM

	MSN:
	* Don't forget display names for buddies.
	* Fix a random crash that might occur when idle.
	* Fix more FQY 240 connection errors.
	* Fix a crash that could occur when adding a buddy.
	* Fix an occasional crash when sending message to an offline user.
	* Fix a random crash that might occur when idle.
	* Fix a crash when logging in with some long non-ASCII passwords.